<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/floral_white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/delete_song_name"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/song_delete"
        android:layout_width="38dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/delete" />


</LinearLayout>